@@ -3,6 +3,7 @@
 
  * select multiple podcasts (episodes) and execute one command (ex: 
    download) on all of these. (suggested by James Dorey and Haim Roitgrund)
+   --> DONE for available podcasts, TODO for downloading and downloaded!
 
  * in libipodsync.py: use mime magic instead of extension-based 
    video detection? --> also, is mp4 always video or could it be 
