@@ -1,3 +1,8 @@
+Thu, 22 Jun 2006 23:37:50 +0200 <thp@perli.net>
+	* Added support for multiple-selection in available podcasts 
+	  tab and starting simultaneous downloads at once
+	* Updated TODO list
+
 Tue, 13 Jun 2006 22:38:17 +0200 <thp@perli.net>
 	* Added libopmlreader, first cut of OPML input support -- you 
 	  can now select from a list of channels and add them to your 
